cleanup and make tests java 8 compatible